@@ -26,11 +26,10 @@ ares_free_string \- Free strings allocated by ares functions
 .SH DESCRIPTION
 The
 .I ares_free_string
-function frees a string allocated by the
-.I ares_mkquery
-function.
+function frees a string allocated by an ares function.
 .SH SEE ALSO
 .BR ares_mkquery (3)
+.BR ares_expand_string (3)
 .SH AUTHOR
 Greg Hudson, MIT Information Systems
 .br
